# hopkins-statistic

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: background.md
docs/templates/: custom.css  module.html.jinja2  theme.css
src/hopkins_statistic/: __init__.py  _inference.py  _statistic.py  _typing.py
tests/: conftest.py  constants.py  smoke_test.py  test_readme.py  test_statistic.py  test_validation.py  test_warnings.py
